--- a/09-practice-project-project-management-app--with-components-state-refs--and-more/01-my-version-project/backend/package.json
+++ b/09-practice-project-project-management-app--with-components-state-refs--and-more/01-my-version-project/backend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "01-api-for-the-blog",
     "version": "1.0.0",
-    "main": "app.js",
+    "main": "server.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +23,7 @@
     "description": "",
     "dependencies": {
         "connect-mongodb-session": "^5.0.0",
+        "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
