Module "26  A (Pretty Deep Dive) Introduction to Next.js"     - 41 Working with Server Action Responses & useFormState     - 42 Building For Production & Understanding NextJS Caching     - 43 Triggering Cache Revalidations     - 44 Don't Store Files Locally On The Filesystem!     - 45 Bonus Storing Uploaded Images In The Cloud (AWS S3)     - 46 Adding Static Metadata     - 47 Adding Dynamic Metadata     - 48 Module Summary     - 49 About the NextJS Pages Router

--- a/26-a-introduction-to-nextjs/02-onwards-foodies-starting-project/package.json
+++ b/26-a-introduction-to-nextjs/02-onwards-foodies-starting-project/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "better-sqlite3": "^12.5.0",
+    "dotenv": "^17.2.3",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
