--- a/26-a-introduction-to-nextjs/04-onwards-to-a-bigger-project-starting-project/package.json
+++ b/26-a-introduction-to-nextjs/04-onwards-to-a-bigger-project-starting-project/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "mongodb": "^7.0.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
